# TS-Reasoner-v0

./: BENCHMARKS.md  LIMITATIONS.md  MODEL_CARD.md  README.md  README_PRE_V3_1.md  RELEASE_NOTES.md  RELEASE_SUMMARY_FULL.txt  TRACE_SCHEMA.md  demo_reasoning.py  inference.py  model_card.md  pyproject.toml  requirements.txt
artifacts/: active_learning_loop_v29_receipt.json  active_learning_loop_v29_report.json  active_learning_status_model_v29.json  artifact_receipt_v0.3.0.json  benchmark_harness_receipt.json  benchmark_harness_report.json  candidate_generator_coverage.json  candidate_model_v2.json  candidate_model_v2_dataset_summary.json  candidate_model_v2_receipt.json  candidate_model_v2_report.json  cold_reader_demo_report.json  deeper_chain_support_repair_receipt.json  deeper_chain_support_repair_report.json  eval_summary.json  external_benchmark_translation_pack_v38_receipt.json  external_benchmark_translation_pack_v38_report.json  external_benchmark_translation_pack_v38_traces.jsonl  external_benchmark_translation_pack_v38_translated_cases.jsonl  external_jsonl_backend_v41_report.json  external_jsonl_backend_v41_traces.jsonl  external_minibench_v33_report.json  external_minibench_v33_traces.jsonl  gpt2_baseline_comparison_v44_receipt.json  gpt2_baseline_comparison_v44_report.json  gpt2_baseline_comparison_v44_traces.jsonl  gpt2_output_fixture_adapter_v42_receipt.json  gpt2_output_fixture_adapter_v42_report.json  gpt2_output_fixture_adapter_v42_sandbox_receipt.json  gpt2_output_fixture_adapter_v42_sandbox_traces.jsonl  latest_trace.json  learned_candidate_model.json  (+91 more)
(+273 files in other folders)
