[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ts-reasoner-v0"
version = "2.2.0"
description = "Inspectable TS-style reasoning telemetry with deterministic tension scoring."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "BoggersTheFish" }
]
keywords = [
  "thinking-system",
  "constraint-graph",
  "reasoning",
  "tension",
  "claim-interaction-graph"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = []

[project.urls]
Homepage = "https://boggersthefish.com"
Repository = "https://github.com/BoggersTheFish/TS-Reasoner-v0"

[project.scripts]
ts-reasoner = "ts_reasoner.cli:main"

[tool.setuptools.packages.find]
include = ["ts_reasoner*"]
